Route 3/go-route3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment-route3
  namespace: route3
spec:
  selector:
    matchLabels:
      app: go-route3
  replicas: 2 
  template:
    metadata:
      labels:
        app: go-route3
    spec:
      containers:
      - name: go-rest-route3
        image: akashsawan/route3
        ports:
        - containerPort: 8080
