Route 3/go-route4.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment-route4
  namespace: route3
spec:
  selector:
    matchLabels:
      app: go-route4
  replicas: 2 
  template:
    metadata:
      labels:
        app: go-route4
    spec:
      containers:
      - name: go-rest-route4
        image: akashsawan/wrongtry
        ports:
        - containerPort: 8080
