Route 3/service-route3.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-route3-service
  namespace: route3
  labels :
    app: route3
spec:
  selector:
    app: go-route3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: NodePort
