Route 3/ingress-route3.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: route3
  name: ingress-go-route1
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: learning.kubernetes
    alb.ingress.kubernetes.io/group.order: '3'
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: go-route4-service
      port:
        number: 80
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /route3
            backend:
              service:
                name: go-route3-service
                port:
                  number: 80
